@@ -25,9 +25,9 @@ import io.vertx.core.Verticle;
 import io.vertx.core.Vertx;
 import io.vertx.core.eventbus.DeliveryContext;
 import io.vertx.core.json.JsonObject;
+import io.vertx.junit5.Checkpoint;
 import io.vertx.junit5.VertxExtension;
-import io.vertx.reactivex.ext.unit.Async;
-import io.vertx.reactivex.ext.unit.TestContext;
+import io.vertx.junit5.VertxTestContext;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
@@ -35,10 +35,9 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 
 import java.time.Clock;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Set;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
@@ -46,7 +45,6 @@ import static org.mockito.Mockito.verify;
 @ExtendWith(VertxExtension.class)
 class NewBotVerticleTest {
 
-    private Vertx vertx;
     private IrcBot mockBot;
     private final String startAddress = "NewBotVerticle:POST:/xfers";
     private final String stopAddress = "NewBotVerticle:DELETE:/xfers/:botname";
@@ -55,9 +53,7 @@ class NewBotVerticleTest {
             .put("body", "{  \"name\": \"lala\",  \"nname\": \"local\",  \"naddr\": \"192.168.99.100\",  \"nport\": 6668,  \"cname\": \"#download\",  \"uname\": \"remoteBotName\",  \"n\": 1}");
 
     @BeforeEach
-    void setUp(TestContext context) {
-        vertx = Vertx.vertx();
-
+    void setUp(VertxTestContext context, Vertx vertx) {
         vertx.eventBus().addOutboundInterceptor(interceptor("out"));
 
         String botNickName = "Andy";
@@ -79,34 +75,35 @@ class NewBotVerticleTest {
         );
         ToggleDccTransferStarted toggleDccTransferStarted = new ToggleDccTransferStartedImpl(stateStorage);
         Verticle verticle = new NewBotVerticle(initializeBot, exitBot, toggleDccTransferStarted);
-        vertx.deployVerticle(verticle, context.asyncAssertSuccess());
+
+        Checkpoint checkpoint = context.checkpoint();
+        vertx.deployVerticle(verticle, ignored -> checkpoint.flag());
     }
 
     @Test
     @Timeout(value = 3_000)
-    void startTransfer_bot_connects_to_irc(TestContext context) {
+    void startTransfer_bot_connects_to_irc(VertxTestContext context, Vertx vertx) {
         vertx.eventBus()
-                .<JsonObject>request(startAddress, startMessage, context.asyncAssertSuccess(m -> {
-                    context.assertEquals("Andy", m.body().getString("bot"));
-                }));
+                .<JsonObject>request(startAddress, startMessage, context.succeeding(m ->
+                        assertThat(m.body().getString("bot")).isEqualTo("Andy")));
 
-        Async botConnect = context.async();
-        vertx.eventBus()
-                .consumer("bot.init", m -> {
-                    botConnect.complete();
-                });
-        botConnect.await();
+        Checkpoint botConnect = context.checkpoint();
+        vertx.eventBus().consumer("bot.init", m -> botConnect.flag());
 
         ArgumentCaptor<BotConnectionDetails> connectionDetailsCaptor = ArgumentCaptor.forClass(BotConnectionDetails.class);
         verify(mockBot).connect(connectionDetailsCaptor.capture());
 
         BotConnectionDetails connectionDetails = connectionDetailsCaptor.getValue();
-        assertEquals("Andy", connectionDetails.getBotNick());
-        assertEquals("name_Andy", connectionDetails.getName());
-        assertEquals("realname_Andy", connectionDetails.getRealName());
-        assertEquals("user_Andy", connectionDetails.getUser());
-        assertEquals("192.168.99.100", connectionDetails.getServerHostName());
-        assertEquals(6668, connectionDetails.getServerPort());
+        assertThat(connectionDetails).isEqualTo(
+                new BotConnectionDetails(
+                        "192.168.99.100",
+                        6668,
+                        "Andy",
+                        "name_Andy",
+                        "user_Andy",
+                        "realname_Andy"
+                )
+        );
 
         ArgumentCaptor<String> captor = ArgumentCaptor.forClass(String.class);
         verify(mockBot).joinChannel(captor.capture());
@@ -115,33 +112,35 @@ class NewBotVerticleTest {
 
     @Test()
     @Timeout(value = 3_000)
-    void stopTransfer_fails_when_bot_missing(TestContext context) {
+    void stopTransfer_fails_when_bot_missing(VertxTestContext context, Vertx vertx) {
         JsonObject stopMessage = new JsonObject()
                 .put("method", "DELETE")
                 .put("params", new JsonObject().put("botname", "missing"));
 
         vertx.eventBus()
-                .request(stopAddress, stopMessage, context.asyncAssertFailure(
-                        reply -> context.assertEquals("bot 'missing' not found", reply.getMessage())
+                .request(stopAddress, stopMessage, context.failing(
+                        reply -> {
+                            assertThat(reply).hasMessage("bot 'missing' not found");
+                            context.completeNow();
+                        }
                 ));
     }
 
     @Test()
     @Timeout(value = 3_000)
-    void stopTransfer_via_request(TestContext context) {
+    void stopTransfer_via_request(VertxTestContext context, Vertx vertx) {
         vertx.eventBus()
-                .<JsonObject>request(startAddress, startMessage, context.asyncAssertSuccess(m -> {
-                    context.assertEquals("Andy", m.body().getString("bot"));
-                }));
+                .<JsonObject>request(startAddress, startMessage, context.succeeding(m ->
+                        assertThat(m.body().getString("bot")).isEqualTo("Andy"))
+                );
 
-        Async async2 = context.async();
+        Checkpoint messageCp = context.checkpoint();
         vertx.eventBus()
                 .<JsonObject>consumer(Address.BOT_EXITED.address(), result -> {
-                    context.assertEquals("Andy", result.body().getString("bot"));
-                    List<String> expectedMessageKeys = Arrays.asList("bot", "timestamp");
-                    Set<String> messageKeys = result.body().getMap().keySet();
-                    context.assertTrue(messageKeys.containsAll(expectedMessageKeys));
-                    async2.complete();
+                    JsonObject body = result.body();
+                    assertThat(body.getString("bot")).isEqualTo("Andy");
+                    assertThat(body.getMap().keySet()).containsAll(List.of("bot", "timestamp"));
+                    messageCp.flag();
                 });
 
         // trigger
@@ -150,30 +149,30 @@ class NewBotVerticleTest {
                 .put("params", new JsonObject().put("botname", "Andy"));
 
         System.out.printf("serialized https request: %s\n", stopMessage.encode());
+        Checkpoint replyCp = context.checkpoint();
         vertx.eventBus()
-                .<JsonObject>request(stopAddress, stopMessage, context.asyncAssertSuccess(reply -> {
+                .<JsonObject>request(stopAddress, stopMessage, context.succeeding(reply -> {
                     JsonObject body = reply.body();
-                    context.assertEquals("Andy", body.getString("bot"));
-                    System.out.printf("stop request reply: %s\n", body.encode());
+                    assertThat(body.getString("bot")).isEqualTo("Andy");
+                    replyCp.flag();
                 }));
     }
 
     @Test()
     @Timeout(value = 3_000)
-    void stopTransfer_because_dcc_transfer_finished(TestContext context) {
+    void stopTransfer_because_dcc_transfer_finished(VertxTestContext context, Vertx vertx) {
         vertx.eventBus()
-                .<JsonObject>request(startAddress, startMessage, context.asyncAssertSuccess(m -> {
-                    context.assertEquals("Andy", m.body().getString("bot"));
-                }));
+                .<JsonObject>request(startAddress, startMessage, context.succeeding(m ->
+                        assertThat(m.body().getString("bot")).isEqualTo("Andy")));
 
-        Async async = context.async();
+        Checkpoint messageCp = context.checkpoint();
         vertx.eventBus()
                 .consumer(Address.BOT_EXITED.address(), result -> {
                     JsonObject body = (JsonObject) result.body();
                     System.out.println(body.encode());
-                    context.assertEquals("Andy", body.getString("bot"));
-                    context.assertEquals("Bot Andy exiting because DCC transfer finished", body.getString("message"));
-                    async.complete();
+                    assertThat(body.getString("bot")).isEqualTo("Andy");
+                    assertThat(body.getString("message")).isEqualTo("Bot Andy exiting because DCC transfer finished");
+                    messageCp.flag();
                 });
 
         DccFinishedEvent dccFinishedEvent = new DccFinishedEvent("Andy");
@@ -185,20 +184,19 @@ class NewBotVerticleTest {
 
     @Test()
     @Timeout(value = 3_000)
-    void stopTransfer_because_dcc_transfer_failed(TestContext context) {
+    void stopTransfer_because_dcc_transfer_failed(VertxTestContext context, Vertx vertx) {
         vertx.eventBus()
-                .<JsonObject>request(startAddress, startMessage, context.asyncAssertSuccess(m -> {
-                    context.assertEquals("Andy", m.body().getString("bot"));
-                }));
+                .<JsonObject>request(startAddress, startMessage, context.succeeding(m ->
+                        assertThat(m.body().getString("bot")).isEqualTo("Andy")));
 
-        Async exitAsync = context.async();
+        Checkpoint exitAsync = context.checkpoint();
         vertx.eventBus()
                 .consumer(Address.BOT_EXITED.address(), result -> {
                     JsonObject body = (JsonObject) result.body();
                     System.out.println(body.encode());
-                    context.assertEquals("Andy", body.getString("bot"));
-                    context.assertEquals("Bot Andy exiting because no space on filesystem", body.getString("message"));
-                    exitAsync.complete();
+                    assertThat(body.getString("bot")).isEqualTo("Andy");
+                    assertThat(body.getString("message")).isEqualTo("Bot Andy exiting because no space on filesystem");
+                    exitAsync.flag();
                 });
 
         DccFailedEvent dccFailedEvent = new DccFailedEvent("Andy", "no space on filesystem");
@@ -210,20 +208,19 @@ class NewBotVerticleTest {
 
     @Test()
     @Timeout(value = 3_000)
-    void stopTransfer_via_request_cancels_transfer_when_dcc_transfer_started(TestContext context) {
+    void stopTransfer_via_request_cancels_transfer_when_dcc_transfer_started(VertxTestContext context, Vertx vertx) {
         vertx.eventBus()
-                .<JsonObject>request(startAddress, startMessage, context.asyncAssertSuccess(m -> {
-                    context.assertEquals("Andy", m.body().getString("bot"));
-                }));
+                .<JsonObject>request(startAddress, startMessage, context.succeeding(m ->
+                        assertThat(m.body().getString("bot")).isEqualTo("Andy")));
 
-        Async async = context.async();
+        Checkpoint messageCp = context.checkpoint();
         vertx.eventBus()
                 .consumer(Address.BOT_EXITED.address(), result -> {
                     JsonObject body = (JsonObject) result.body();
                     System.out.println(body.encode());
-                    context.assertEquals("Andy", body.getString("bot"));
-                    context.assertEquals("Bot Andy exiting because requested shutdown", body.getString("message"));
-                    async.complete();
+                    assertThat(body.getString("bot")).isEqualTo("Andy");
+                    assertThat(body.getString("message")).isEqualTo("Bot Andy exiting because requested shutdown");
+                    messageCp.flag();
                 });
 
         // trigger
@@ -238,11 +235,11 @@ class NewBotVerticleTest {
 
         System.out.printf("serialized https request: %s\n", stopMessage.encode());
         vertx.eventBus()
-                .<JsonObject>request(stopAddress, stopMessage, context.asyncAssertSuccess(reply -> {
+                .<JsonObject>request(stopAddress, stopMessage, context.succeeding(reply -> {
                     JsonObject body = reply.body();
-                    context.assertEquals("Andy", body.getString("bot"));
+                    assertThat(body.getString("bot")).isEqualTo("Andy");
                     System.out.printf("stop request reply: %s\n", body.encode());
-                    context.verify(unused -> verify(mockBot).cancelDcc("remoteBotName"));
+                    context.verify(() -> verify(mockBot).cancelDcc("remoteBotName"));
                 }));
 
     }
